--- a/bower.json
+++ b/bower.json
@@ -16,11 +16,13 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": ">=1.4.x",
+    "angular": ">=1.5.8",
+    "angular-aria": ">=1.5.8",
     "jquery": "~3.1.1",
-    "fullcalendar": "~2.9.1",
-    "moment": ">=2.5.0"
-  },
+    "fullcalendar": ">=2.0.1",
+    "moment": ">=2.5.0", 
+    "angular-ui-calendar": ">=1.0.2" 
+    },
   "devDependencies": {
     "angular-mocks": "~1.x",
     "bootstrap-css": "2.3.1"
